--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ environment:
 dependencies:
   dio: ^3.0.9
   flutter_mobx: ^1.1.0
+  flutter_dotenv: ^2.1.0
   mobx: ^1.2.1
   flutter_modular: ^2.0.1
   get: ^3.15.0
@@ -69,6 +70,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/images/
+    - .env
+    - .env_dev
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
