--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_modular: ^2.0.1
   get: ^3.15.0
   flutter_screenutil: ^1.1.0
+  firebase_auth: ^0.16.1
   flutter:
     sdk: flutter
 
