listagem de agendamentos, filtro para status, campo de busca, logout, tela do agendamento com alteração do status

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   flutter_dotenv: ^2.1.0
   mobx: ^1.2.1
   flutter_modular: ^2.0.1
+  flutter_icons: ^1.1.0
   get: ^3.15.0
   flutter_screenutil: ^1.1.0
   shared_preferences: ^0.5.7+3
+  intl: ^0.16.1
   #Guarda informação criptografada
   flutter_secure_storage: ^3.3.3
     #Json
