--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 profile=prod 
-base_url=http://backend.cuidapet.com.br
+base_url=http://192.168.0.5:8888
 dio_connectTimeout=60000
 dio_receiveTimeout=60000
