--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,6 +38,7 @@ android {
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -54,7 +55,8 @@ flutter {
 }
 
 dependencies {
-  implementation 'com.google.firebase:firebase-messaging:<21.0.1>'
+  implementation 'com.google.firebase:firebase-analytics:17.2.2'
+  implementation 'com.google.firebase:firebase-messaging:20.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
