--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,10 +5,20 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+
+          <uses-permission android:name="android.permission.INTERNET"/>
+          <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+          <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
-        android:name="Application"
-        android:label="cuidapet_fornecedor"
+        android:name=".Application"
+        android:label="CuidaPet Fornecedor"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data 
+           android:name="com.google.firebase.messaging.default_notification_channel_id"
+           android:value="br.com.lucianamenezes.cuidapet_fornecedor"
+           />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
