--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   mobx: ^1.2.1
   flutter_modular: ^2.0.1
   flutter_icons: ^1.1.0
+  flutter_local_notifications: ^1.4.4+2
   get: ^3.15.0
   flutter_screenutil: ^1.1.0
   shared_preferences: ^0.5.7+3
@@ -49,6 +50,7 @@ dependencies:
   json_annotation: ^3.0.1
   firebase_messaging: ^6.0.16
   firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.7
   flutter:
     sdk: flutter
 
